--- a/FufuLauncher/Views/SettingsPage.xaml
+++ b/FufuLauncher/Views/SettingsPage.xaml
@@ -394,6 +394,25 @@
                                  IsOpen="True"
                                  IsClosable="False"
                                  Margin="0,12,0,0"/>
+                        
+                        <ToggleSwitch Header="启用 BetterGI 联动"
+                                      OffContent="已禁用"
+                                      OnContent="已启用"
+                                      IsOn="{x:Bind ViewModel.IsBetterGIIntegrationEnabled, Mode=TwoWay}"
+                                      Margin="0,16,0,0"/>
+                        <TextBlock Text="启动游戏时的同时打开BetterGI"
+                                   Style="{ThemeResource CaptionTextBlockStyle}"
+                                   Opacity="0.7"
+                                   Margin="0,0,0,0"/>
+                        <ToggleSwitch Header="退出游戏时关闭 BetterGI"
+                                      OffContent="已禁用"
+                                      OnContent="已启用"
+                                      IsOn="{x:Bind ViewModel.IsBetterGICloseOnExitEnabled, Mode=TwoWay}"
+                                      Margin="0,8,0,0"/>
+                        <TextBlock Text="点击退出游戏,自动关闭BetterGI"
+                                   Style="{ThemeResource CaptionTextBlockStyle}"
+                                   Opacity="0.7"
+                                   Margin="0,0,0,0"/>
                     </StackPanel>
                 </Border>
                 
@@ -412,7 +431,7 @@
                                                FontSize="18" 
                                                Text="&#xe900;"/>
                                     <TextBlock VerticalAlignment="Center" 
-                                               Text="芙芙启动器 1.0.2"
+                                               Text="芙芙启动器 1.0.2.2"
                                                Style="{ThemeResource BodyTextBlockStyle}"/>
                                 </StackPanel>
                             </HyperlinkButton>
@@ -426,6 +445,19 @@
                                                Text="&#xe901;"/>
                                     <TextBlock VerticalAlignment="Center" 
                                                Text="CodeCubist"
+                                               Style="{ThemeResource BodyTextBlockStyle}"/>
+                                </StackPanel>
+                            </HyperlinkButton>
+
+                            <HyperlinkButton Margin="-12,0,0,0" 
+                                             NavigateUri="https://github.com/MarlonPullan6">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <TextBlock VerticalAlignment="Center" 
+                                               FontFamily="ms-appx:///Assets/Fonts/icomoon.ttf#icomoon" 
+                                               FontSize="18" 
+                                               Text="&#xe901;"/>
+                                    <TextBlock VerticalAlignment="Center" 
+                                               Text="MIANKRAM"
                                                Style="{ThemeResource BodyTextBlockStyle}"/>
                                 </StackPanel>
                             </HyperlinkButton>
