--- a/FufuLauncher/Views/SettingsPage.xaml
+++ b/FufuLauncher/Views/SettingsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="FufuLauncher.Views.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:helpers="using:FufuLauncher.Helpers">
+      xmlns:helpers="using:FufuLauncher.Helpers"
+      xmlns:viewModels="using:FufuLauncher.ViewModels">
 
     <Page.Resources>
         <ResourceDictionary>
@@ -365,24 +366,41 @@
                     </StackPanel>
                 </Border>
                 
-                <Border x:Name="WindowEffectsItem" Style="{StaticResource SettingsCardStyle}">
-                    <StackPanel>
-                        <TextBlock Text="窗口效果" 
-                                   Style="{ThemeResource SubtitleTextBlockStyle}"
-                                   Margin="0,0,0,16"/>
-                        
-                        <ToggleSwitch Header="启用亚克力（Acrylic）背景效果"
-                                      OffContent="已禁用"
-                                      OnContent="已启用"
-                                      IsOn="{x:Bind ViewModel.IsAcrylicEnabled, Mode=TwoWay}"/>
-                        
-                        <InfoBar Severity="Warning"
-                                 Message="注意：浅色模式下可能存在显示问题，建议使用深色模式或关闭此选项"
-                                 IsOpen="True"
-                                 IsClosable="False"
-                                 Margin="0,12,0,0"/>
-                    </StackPanel>
-                </Border>
+<Border x:Name="WindowEffectsItem" Style="{StaticResource SettingsCardStyle}">
+    <StackPanel>
+        <TextBlock Text="窗口效果" 
+                   Style="{ThemeResource SubtitleTextBlockStyle}"
+                   Margin="0,0,0,16"/>
+        
+        <TextBlock Text="窗口背景材质" 
+                   Style="{ThemeResource BodyStrongTextBlockStyle}"
+                   FontSize="14"/>
+        <TextBlock Text="选择窗口背景的视觉效果"
+                   Style="{ThemeResource CaptionTextBlockStyle}"
+                   Opacity="0.7"
+                   Margin="0,2,0,12"/>
+
+        <StackPanel Style="{StaticResource SettingItemStyle}">
+            <RadioButton Content="Mica (云母)" 
+                         FontSize="14"
+                         GroupName="WindowBackdrop"
+                         IsChecked="{Binding CurrentWindowBackdrop, Mode=TwoWay, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Mica}">
+            </RadioButton>
+
+            <RadioButton Content="Acrylic (亚克力)" 
+                         FontSize="14"
+                         GroupName="WindowBackdrop"
+                         IsChecked="{Binding CurrentWindowBackdrop, Mode=TwoWay, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Acrylic}">
+            </RadioButton>
+        </StackPanel>
+        
+        <InfoBar Severity="Warning"
+                 Message="注意：Mica 效果仅在 Windows 11 上可用，旧版本系统可能会回退到纯色。"
+                 IsOpen="True"
+                 IsClosable="False"
+                 Margin="0,12,0,0"/>
+    </StackPanel>
+</Border>
                 
                 <Border x:Name="StartupSoundItem" Style="{StaticResource SettingsCardStyle}">
                     <StackPanel>
