--- a/FufuLauncher/Views/Main/BlankPage.xaml
+++ b/FufuLauncher/Views/Main/BlankPage.xaml
@@ -210,6 +210,15 @@
                 </Grid>
             </StackPanel>
             
+            <Button Click="DownloadGame_Click"
+                    Style="{StaticResource AccentButtonStyle}">
+                <Button.Content>
+                    <StackPanel Orientation="Horizontal" Spacing="8">
+                        <FontIcon Glyph="&#xE896;" />
+                        <TextBlock Text="下载/修复游戏资源" />
+                    </StackPanel>
+                </Button.Content>
+            </Button>
             
             <Button Content="查看游戏公告" Click="OpenAnnouncement_Click"
                     Style="{StaticResource AccentButtonStyle}" 
