--- a/FufuLauncher/Views/Main/AccountPage.xaml
+++ b/FufuLauncher/Views/Main/AccountPage.xaml
@@ -42,49 +42,85 @@
 
             <StackPanel Spacing="24" Visibility="{x:Bind ViewModel.IsLoggedIn, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
                 
-                <Border Style="{StaticResource CardBorderStyle}" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
-                    <Grid ColumnSpacing="16">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+<Border Style="{StaticResource CardBorderStyle}" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
+    <Grid ColumnSpacing="16">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/> <ColumnDefinition Width="*"/>    <ColumnDefinition Width="Auto"/> </Grid.ColumnDefinitions>
 
-                        <PersonPicture ProfilePicture="{x:Bind ViewModel.CurrentAccount.AvatarUrl, Mode=OneWay}" 
-                                       DisplayName="{x:Bind ViewModel.CurrentAccount.Nickname, Mode=OneWay}"
-                                       Width="80" Height="80"/>
+        <PersonPicture ProfilePicture="{x:Bind ViewModel.CurrentAccount.AvatarUrl, Mode=OneWay}" 
+                       DisplayName="{x:Bind ViewModel.CurrentAccount.Nickname, Mode=OneWay}"
+                       Width="84" Height="84"/>
 
-                        <StackPanel Grid.Column="1" VerticalAlignment="Center" Spacing="4">
-                            <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Bottom">
-                                <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Nickname, Mode=OneWay}" Style="{StaticResource SubtitleTextBlockStyle}"/>
-                                <Border Background="{ThemeResource AccentFillColorDefaultBrush}" CornerRadius="4" Padding="6,2" VerticalAlignment="Center">
-                                    <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Level, Mode=OneWay}" Foreground="White" FontSize="10" FontWeight="Bold"/>
-                                </Border>
-                            </StackPanel>
+        <StackPanel Grid.Column="1" VerticalAlignment="Center" Spacing="6">
 
-                            <StackPanel Orientation="Horizontal" Spacing="12">
-                                <TextBlock Foreground="{ThemeResource TextFillColorSecondaryBrush}" FontSize="13">
-                                    <Run Text="UID:"/>
-                                    <Run Text="{x:Bind ViewModel.CurrentAccount.GameUid, Mode=OneWay}" FontWeight="SemiBold"/>
-                                </TextBlock>
-                                <Border Width="1" Height="12" Background="{ThemeResource DividerStrokeColorDefaultBrush}"/>
-                                <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Server, Mode=OneWay}" Foreground="{ThemeResource TextFillColorSecondaryBrush}" FontSize="13"/>
-                            </StackPanel>
-                        </StackPanel>
+            <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Bottom">
+                <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Nickname, Mode=OneWay}" 
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           VerticalAlignment="Center"/>
 
-                        <StackPanel Grid.Column="2" VerticalAlignment="Top">
-                            <ProgressRing IsActive="{x:Bind ViewModel.IsLoadingUserInfo, Mode=OneWay}" 
-                                          Visibility="{x:Bind ViewModel.IsLoadingUserInfo, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
-                                          Width="20" Height="20"/>
-                        </StackPanel>
-                    </Grid>
+                <Border Background="{ThemeResource LayerFillColorDefaultBrush}" 
+                        BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                        BorderThickness="1"
+                        CornerRadius="12" 
+                        Padding="8,2"
+                        VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" Spacing="4" VerticalAlignment="Center">
+                        <FontIcon Glyph="{x:Bind ViewModel.CurrentAccount.GenderIcon, Mode=OneWay}" 
+                                  FontFamily="Segoe Fluent Icons" 
+                                  FontSize="12" 
+                                  Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
+                        <TextBlock Text="{x:Bind ViewModel.CurrentAccount.GenderText, Mode=OneWay}" 
+                                   FontSize="12" 
+                                   Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                   VerticalAlignment="Center"/>
+                    </StackPanel>
                 </Border>
+                
+                <Border Background="{ThemeResource AccentFillColorDefaultBrush}" CornerRadius="4" Padding="6,2" VerticalAlignment="Center" Margin="4,0,0,0">
+                    <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Level, Mode=OneWay}" Foreground="White" FontSize="10" FontWeight="Bold"/>
+                </Border>
+            </StackPanel>
 
-                <Grid RowSpacing="12" ColumnSpacing="12">
+            <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Sign, Mode=OneWay}" 
+                       Foreground="{ThemeResource TextFillColorSecondaryBrush}" 
+                       FontSize="13" 
+                       TextTrimming="CharacterEllipsis" 
+                       MaxLines="1"/>
+
+            <StackPanel Orientation="Horizontal" Spacing="8">
+                <TextBlock Foreground="{ThemeResource TextFillColorTertiaryBrush}" FontSize="12">
+                    <Run Text="UID:"/>
+                    <Run Text="{x:Bind ViewModel.CurrentAccount.GameUid, Mode=OneWay}" FontWeight="SemiBold"/>
+                </TextBlock>
+
+                <Border Width="1" Height="10" Background="{ThemeResource DividerStrokeColorDefaultBrush}"/>
+
+                <TextBlock Text="{x:Bind ViewModel.CurrentAccount.Server, Mode=OneWay}" 
+                           Foreground="{ThemeResource TextFillColorTertiaryBrush}" FontSize="12"/>
+
+                <Border Width="1" Height="10" Background="{ThemeResource DividerStrokeColorDefaultBrush}"/>
+
+                <StackPanel Orientation="Horizontal" Spacing="4" VerticalAlignment="Center">
+                    <FontIcon Glyph="&#xE81D;" FontSize="10" FontFamily="Segoe Fluent Icons" Foreground="{ThemeResource TextFillColorTertiaryBrush}"/>
+                    <TextBlock Text="{x:Bind ViewModel.CurrentAccount.IpRegion, Mode=OneWay}" 
+                               Foreground="{ThemeResource TextFillColorTertiaryBrush}" FontSize="12"/>
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" VerticalAlignment="Top">
+            <ProgressRing IsActive="{x:Bind ViewModel.IsLoadingUserInfo, Mode=OneWay}" 
+                          Visibility="{x:Bind ViewModel.IsLoadingUserInfo, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+                          Width="20" Height="20"/>
+        </StackPanel>
+    </Grid>
+</Border>
+
+<Grid RowSpacing="12" ColumnSpacing="12">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/> </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
@@ -147,7 +183,14 @@
                         </StackPanel>
                     </Button>
 
-                    <Button Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Padding="0,12"
+    <Button Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Padding="0,12"
+            Click="OnGachaAnalysisClicked"> <StackPanel Spacing="8" Orientation="Horizontal" HorizontalAlignment="Center">
+            <FontIcon Glyph="&#xE9D2;" FontSize="16"/>
+            <TextBlock Text="抽卡分析"/>
+        </StackPanel>
+    </Button>
+
+                    <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Padding="0,12"
                             Command="{x:Bind ViewModel.LogoutCommand}">
                         <StackPanel Spacing="8" Orientation="Horizontal" HorizontalAlignment="Center">
                             <FontIcon Glyph="&#xE7E8;" FontSize="16" Foreground="{ThemeResource SystemFillColorCriticalBrush}"/>
